fix: update API types
